重构parser