@@ -1,431 +1,357 @@
 package byx.script.core;
 
-import byx.script.core.parser.exception.ParseException;
-import byx.script.core.parser.parserc.Cursor;
-import byx.script.core.parser.parserc.ParseResult;
+import byx.script.core.common.Pair;
+import byx.script.core.parser.exception.InternalParseException;
 import byx.script.core.parser.parserc.Parser;
 import byx.script.core.parser.parserc.Parsers;
-import byx.script.core.common.Pair;
 import org.junit.jupiter.api.Test;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.Objects;
-import java.util.Set;
-import java.util.stream.Collectors;
 
-import static byx.script.core.parser.parserc.Parsers.fail;
 import static byx.script.core.parser.parserc.Parsers.*;
 import static org.junit.jupiter.api.Assertions.*;
 
 public class ParsercTest {
     private static class MyException extends RuntimeException {
-        private final Cursor cursor;
+        private final String input;
+        private final int index;
         private final String msg;
 
-        public MyException(Cursor cursor, String msg) {
-            this.cursor = cursor;
+        private MyException(String input, int index, String msg) {
+            this.input = input;
+            this.index = index;
             this.msg = msg;
         }
 
-        public Cursor getCursor() {
-            return cursor;
+        public String getInput() {
+            return input;
+        }
+
+        public int getIndex() {
+            return index;
         }
 
         @Override
         public String getMessage() {
-            return String.format("解析异常：第%d行, 第%d列，%s", cursor.row(), cursor.col(), msg);
+            return msg;
         }
-    }
-
-    private <R> void verifyParseResult(ParseResult<R> r, R expectedResult, int expectedBeforeIndex, int expectedRemainIndex) {
-        assertEquals(expectedResult, r.result());
-        assertEquals(expectedBeforeIndex, r.before().index());
-        assertEquals(expectedRemainIndex, r.remain().index());
-    }
-
-    @Test
-    public void testSuccess1() {
-        Parser<String> p = success(input -> {
-            if (!input.end() && input.current() == 'a') {
-                return "aaa";
-            } else {
-                return "bbb";
-            }
-        });
-
-        verifyParseResult(p.parse(new Cursor("a")), "aaa", 0, 0);
-        verifyParseResult(p.parse(new Cursor("b")), "bbb", 0, 0);
-        verifyParseResult(p.parse(new Cursor("")), "bbb", 0, 0);
-    }
-
-    @Test
-    public void testSuccess2() {
-        Parser<String> p = success(() -> "byx");
-        verifyParseResult(p.parse(new Cursor("abc")), "byx", 0, 0);
-        verifyParseResult(p.parse(new Cursor("")), "byx", 0, 0);
-    }
-
-    @Test
-    public void testSuccess3() {
-        Parser<Integer> p = success(123);
-        verifyParseResult(p.parse(new Cursor("abc")), 123, 0, 0);
-        verifyParseResult(p.parse(new Cursor("")), 123, 0, 0);
-    }
-
-    @Test
-    public void testSuccess4() {
-        Parser<Integer> p = success();
-        verifyParseResult(p.parse(new Cursor("abc")), null, 0, 0);
-        verifyParseResult(p.parse(new Cursor("")), null, 0, 0);
     }
 
     @Test
     public void testEmpty1() {
         Parser<Integer> p = empty(123);
-        verifyParseResult(p.parse(new Cursor("abc")), 123, 0, 0);
-        verifyParseResult(p.parse(new Cursor("")), 123, 0, 0);
-    }
-
-    @Test
-    public void testEmpty2() {
-        Parser<Integer> p = empty();
-        verifyParseResult(p.parse(new Cursor("abc")), null, 0, 0);
-        verifyParseResult(p.parse(new Cursor("")), null, 0, 0);
-    }
-
-    @Test
-    public void testFail1() {
-        Parser<?> p = fail(cursor -> {
-            if (!cursor.end() && cursor.current() == 'a') {
-                return new MyException(cursor, "byx");
-            } else {
-                return new ParseException(cursor, "byx");
-            }
-        });
-
-        assertThrows(MyException.class, () -> p.parse("abc"));
-        assertThrows(ParseException.class, () -> p.parse("bbc"));
-        assertThrows(ParseException.class, () -> p.parse(""));
-    }
-
-    @Test
-    public void testFail2() {
-        Parser<?> p = fail(() -> new MyException(new Cursor("aaa"), "byx"));
-        assertThrows(MyException.class, () -> p.parse("abc"));
-        assertThrows(MyException.class, () -> p.parse(""));
-    }
-
-    @Test
-    public void testFail3() {
-        Parser<?> p = Parsers.fail("byx");
-        ParseException e1 = assertThrowsExactly(ParseException.class, () -> p.parse("abc"));
-        assertTrue(e1.getMessage().contains("byx"));
-        ParseException e2 = assertThrowsExactly(ParseException.class, () -> p.parse(""));
-        assertTrue(e2.getMessage().contains("byx"));
+        assertEquals(123, p.parse("abc"));
+        assertEquals(123, p.parse(""));
     }
 
     @Test
     public void testFail4() {
         Parser<?> p = Parsers.fail();
-        assertThrowsExactly(ParseException.class, () -> p.parse("abc"));
-        assertThrowsExactly(ParseException.class, () -> p.parse(""));
+        assertThrows(InternalParseException.class, () -> p.parse("abc"));
+        assertThrows(InternalParseException.class, () -> p.parse(""));
     }
 
     @Test
     public void testEnd1() {
         Parser<String> p = end("byx");
-        verifyParseResult(p.parse(new Cursor("")), "byx", 0, 0);
-        assertThrows(ParseException.class, () -> p.parse(new Cursor("abc")));
+        String r = p.parse("");
+        assertEquals("byx", r);
+        assertThrows(InternalParseException.class, () -> p.parse("abc"));
     }
 
     @Test
     public void testEnd2() {
         Parser<?> p = end();
-        verifyParseResult(p.parse(new Cursor("")), null, 0, 0);
-        assertThrows(ParseException.class, () -> p.parse(new Cursor("abc")));
+        Object r = p.parse("");
+        assertNull(r);
+        assertThrows(InternalParseException.class, () -> p.parse("abc"));
     }
 
     @Test
     public void testCh1() {
         Parser<Character> p = ch(c -> c == 'a');
-        verifyParseResult(p.parse(new Cursor("abc")), 'a', 0, 1);
-        assertThrows(ParseException.class, () -> p.parse(new Cursor("def")));
-        assertThrows(ParseException.class, () -> p.parse(new Cursor("")));
+        Character r = p.parse("abc");
+        assertEquals((Character) 'a', r);
+        assertThrows(InternalParseException.class, () -> p.parse("def"));
+        assertThrows(InternalParseException.class, () -> p.parse(""));
     }
 
     @Test
     public void testCh2() {
         Parser<Character> p = ch('a');
-        verifyParseResult(p.parse(new Cursor("abc")), 'a', 0, 1);
-        assertThrows(ParseException.class, () -> p.parse(new Cursor("def")));
-        assertThrows(ParseException.class, () -> p.parse(new Cursor("")));
+        Character r = p.parse("abc");
+        assertEquals((Character) 'a', r);
+        assertThrows(InternalParseException.class, () -> p.parse("def"));
+        assertThrows(InternalParseException.class, () -> p.parse(""));
     }
 
     @Test
     public void testAny() {
         Parser<Character> p = any();
-        verifyParseResult(p.parse(new Cursor("abc")), 'a', 0, 1);
-        verifyParseResult(p.parse(new Cursor("bcd")), 'b', 0, 1);
-        assertThrows(ParseException.class, () -> p.parse(new Cursor("")));
+        Character r1 = p.parse("abc");
+        assertEquals((Character) 'a', r1);
+        Character r = p.parse("bcd");
+        assertEquals((Character) 'b', r);
+        assertThrows(InternalParseException.class, () -> p.parse(""));
     }
 
     @Test
     public void testRange1() {
         Parser<Character> p = range('d', 'f');
-        verifyParseResult(p.parse(new Cursor("dog")), 'd', 0, 1);
+        Character r = p.parse("dog");
+        assertEquals((Character) 'd', r);
         assertEquals('e', p.parse("egg"));
         assertEquals('f', p.parse("father"));
-        assertThrows(ParseException.class, () -> p.parse(new Cursor("apple")));
-        assertThrows(ParseException.class, () -> p.parse(new Cursor("high")));
-        assertThrows(ParseException.class, () -> p.parse(new Cursor("")));
+        assertThrows(InternalParseException.class, () -> p.parse("apple"));
+        assertThrows(InternalParseException.class, () -> p.parse("high"));
+        assertThrows(InternalParseException.class, () -> p.parse(""));
     }
 
     @Test
     public void testRange2() {
         Parser<Character> p = range('f', 'd');
-        verifyParseResult(p.parse(new Cursor("dog")), 'd', 0, 1);
+        Character r = p.parse("dog");
+        assertEquals((Character) 'd', r);
         assertEquals('e', p.parse("egg"));
         assertEquals('f', p.parse("father"));
-        assertThrows(ParseException.class, () -> p.parse(new Cursor("apple")));
-        assertThrows(ParseException.class, () -> p.parse(new Cursor("high")));
-        assertThrows(ParseException.class, () -> p.parse(new Cursor("")));
+        assertThrows(InternalParseException.class, () -> p.parse("apple"));
+        assertThrows(InternalParseException.class, () -> p.parse("high"));
+        assertThrows(InternalParseException.class, () -> p.parse(""));
     }
 
     @Test
     public void testChs1() {
         Parser<Character> p = chs('f', 'o', 'h');
-        verifyParseResult(p.parse(new Cursor("far")), 'f', 0, 1);
+        Character r = p.parse("far");
+        assertEquals((Character) 'f', r);
         assertEquals('o', p.parse("ohh"));
         assertEquals('h', p.parse("high"));
-        assertThrows(ParseException.class, () -> p.parse("byx"));
-        assertThrows(ParseException.class, () -> p.parse(""));
+        assertThrows(InternalParseException.class, () -> p.parse("byx"));
+        assertThrows(InternalParseException.class, () -> p.parse(""));
     }
 
     @Test
     public void testChs2() {
         Parser<Character> p = chs('f');
-        verifyParseResult(p.parse(new Cursor("far")), 'f', 0, 1);
-        assertThrows(ParseException.class, () -> p.parse("byx"));
-        assertThrows(ParseException.class, () -> p.parse(""));
+        Character r = p.parse("far");
+        assertEquals((Character) 'f', r);
+        assertThrows(InternalParseException.class, () -> p.parse("byx"));
+        assertThrows(InternalParseException.class, () -> p.parse(""));
     }
 
     @Test
     public void testChs3() {
         Parser<Character> p = chs();
-        assertThrows(ParseException.class, () -> p.parse("byx"));
-        assertThrows(ParseException.class, () -> p.parse(""));
+        assertThrows(InternalParseException.class, () -> p.parse("byx"));
+        assertThrows(InternalParseException.class, () -> p.parse(""));
     }
 
     @Test
     public void testNot1() {
         Parser<Character> p = not('f', 'o', 'h');
-        verifyParseResult(p.parse(new Cursor("byx")), 'b', 0, 1);
-        assertThrows(ParseException.class, () -> p.parse("fog"));
-        assertThrows(ParseException.class, () -> p.parse("ohhh"));
-        assertThrows(ParseException.class, () -> p.parse("high"));
-        assertThrows(ParseException.class, () -> p.parse(""));
+        Character r = p.parse("byx");
+        assertEquals((Character) 'b', r);
+        assertThrows(InternalParseException.class, () -> p.parse("fog"));
+        assertThrows(InternalParseException.class, () -> p.parse("ohhh"));
+        assertThrows(InternalParseException.class, () -> p.parse("high"));
+        assertThrows(InternalParseException.class, () -> p.parse(""));
     }
 
     @Test
     public void testNot2() {
         Parser<Character> p = not('f');
-        verifyParseResult(p.parse(new Cursor("byx")), 'b', 0, 1);
-        assertThrows(ParseException.class, () -> p.parse("fog"));
-        assertThrows(ParseException.class, () -> p.parse(""));
+        Character r = p.parse("byx");
+        assertEquals((Character) 'b', r);
+        assertThrows(InternalParseException.class, () -> p.parse("fog"));
+        assertThrows(InternalParseException.class, () -> p.parse(""));
     }
 
     @Test
     public void testNot3() {
         Parser<Character> p = not();
-        verifyParseResult(p.parse(new Cursor("byx")), 'b', 0, 1);
-        assertThrows(ParseException.class, () -> p.parse(""));
+        Character r = p.parse("byx");
+        assertEquals((Character) 'b', r);
+        assertThrows(InternalParseException.class, () -> p.parse(""));
     }
 
     @Test
     public void testStr() {
         Parser<String> p = str("byx");
-        verifyParseResult(p.parse(new Cursor("byxabcd")), "byx", 0, 3);
-        verifyParseResult(p.parse(new Cursor("byx")), "byx", 0, 3);
-        assertThrows(ParseException.class, () -> p.parse("by"));
-        assertThrows(ParseException.class, () -> p.parse("bytb"));
-        assertThrows(ParseException.class, () -> p.parse(""));
+        String r1 = p.parse("byxabcd");
+        assertEquals("byx", r1);
+        String r = p.parse("byx");
+        assertEquals("byx", r);
+        assertThrows(InternalParseException.class, () -> p.parse("by"));
+        assertThrows(InternalParseException.class, () -> p.parse("bytb"));
+        assertThrows(InternalParseException.class, () -> p.parse(""));
     }
 
     @Test
     public void testStrs1() {
         Parser<String> p = strs("apple", "amend", "byx");
-        verifyParseResult(p.parse(new Cursor("applemen")), "apple", 0, 5);
-        verifyParseResult(p.parse(new Cursor("byxm")), "byx", 0, 3);
-        assertThrows(ParseException.class, () -> p.parse("app"));
-        assertThrows(ParseException.class, () -> p.parse("bycd"));
-        assertThrows(ParseException.class, () -> p.parse(""));
+        String r1 = p.parse("applemen");
+        assertEquals("apple", r1);
+        String r = p.parse("byxm");
+        assertEquals("byx", r);
+        assertThrows(InternalParseException.class, () -> p.parse("app"));
+        assertThrows(InternalParseException.class, () -> p.parse("bycd"));
+        assertThrows(InternalParseException.class, () -> p.parse(""));
     }
 
     @Test
     public void testStrs2() {
         Parser<String> p = strs("byx");
-        verifyParseResult(p.parse(new Cursor("byxabcd")), "byx", 0, 3);
-        verifyParseResult(p.parse(new Cursor("byx")), "byx", 0, 3);
-        assertThrows(ParseException.class, () -> p.parse("by"));
-        assertThrows(ParseException.class, () -> p.parse("bytb"));
-        assertThrows(ParseException.class, () -> p.parse(""));
+        String r1 = p.parse("byxabcd");
+        assertEquals("byx", r1);
+        String r = p.parse("byx");
+        assertEquals("byx", r);
+        assertThrows(InternalParseException.class, () -> p.parse("by"));
+        assertThrows(InternalParseException.class, () -> p.parse("bytb"));
+        assertThrows(InternalParseException.class, () -> p.parse(""));
     }
 
     @Test
     public void testStrs3() {
         Parser<String> p = strs();
-        assertThrows(ParseException.class, () -> p.parse("abc"));
-        assertThrows(ParseException.class, () -> p.parse(""));
+        assertThrows(InternalParseException.class, () -> p.parse("abc"));
+        assertThrows(InternalParseException.class, () -> p.parse(""));
     }
 
     @Test
     public void testAnd() {
         Parser<Pair<String, Character>> p = str("hello").and(ch('a'));
-        verifyParseResult(p.parse(new Cursor("helloabc")), new Pair<>("hello", 'a'), 0, 6);
-        assertThrows(ParseException.class, () -> p.parse("hello world"));
-        assertThrows(ParseException.class, () -> p.parse("byx"));
-        assertThrows(ParseException.class, () -> p.parse(""));
+        Pair<String, Character> r = p.parse("helloabc");
+        assertEquals(new Pair<>("hello", 'a'), r);
+        assertThrows(InternalParseException.class, () -> p.parse("hello world"));
+        assertThrows(InternalParseException.class, () -> p.parse("byx"));
+        assertThrows(InternalParseException.class, () -> p.parse(""));
     }
 
     @Test
     public void testSeq1() {
         Parser<List<Object>> p = seq(ch('a'), str("bcd"), ch('e'));
-        verifyParseResult(p.parse(new Cursor("abcdefgh")), List.of('a', "bcd", 'e'), 0, 5);
-        assertThrows(ParseException.class, () -> p.parse("abcdk"));
-        assertThrows(ParseException.class, () -> p.parse("amnpuk"));
-        assertThrows(ParseException.class, () -> p.parse("byx"));
-        assertThrows(ParseException.class, () -> p.parse("a"));
-        assertThrows(ParseException.class, () -> p.parse("abc"));
-        assertThrows(ParseException.class, () -> p.parse("abcd"));
-        assertThrows(ParseException.class, () -> p.parse(""));
+        List<?> r = p.parse("abcdefgh");
+        assertEquals(List.of('a', "bcd", 'e'), r);
+        assertThrows(InternalParseException.class, () -> p.parse("abcdk"));
+        assertThrows(InternalParseException.class, () -> p.parse("amnpuk"));
+        assertThrows(InternalParseException.class, () -> p.parse("byx"));
+        assertThrows(InternalParseException.class, () -> p.parse("a"));
+        assertThrows(InternalParseException.class, () -> p.parse("abc"));
+        assertThrows(InternalParseException.class, () -> p.parse("abcd"));
+        assertThrows(InternalParseException.class, () -> p.parse(""));
     }
 
     @Test
     public void testSeq2() {
         Parser<List<Object>> p = seq(str("abc"));
-        verifyParseResult(p.parse(new Cursor("abcde")), List.of("abc"), 0, 3);
-        assertThrows(ParseException.class, () -> p.parse("axy"));
-        assertThrows(ParseException.class, () -> p.parse("ab"));
-        assertThrows(ParseException.class, () -> p.parse(""));
+        List<?> r = p.parse("abcde");
+        assertEquals(List.of("abc"), r);
+        assertThrows(InternalParseException.class, () -> p.parse("axy"));
+        assertThrows(InternalParseException.class, () -> p.parse("ab"));
+        assertThrows(InternalParseException.class, () -> p.parse(""));
     }
 
     @Test
     public void testSeq3() {
         Parser<List<Object>> p = seq();
-        verifyParseResult(p.parse(new Cursor("abcde")), Collections.emptyList(), 0, 0);
-        ParseResult<List<Object>> r2 = p.parse(new Cursor(""));
-        assertEquals(Collections.emptyList(), r2.result());
-        assertEquals(0, r2.before().index());
-        assertEquals(0, r2.remain().index());
+        List<Object> r = p.parse("abcde");
+        assertEquals(Collections.emptyList(), r);
+        assertEquals(Collections.emptyList(), p.parse(""));
     }
 
     @Test
     public void testOr() {
         Parser<Character> p = ch('a').or(ch('b'));
-        verifyParseResult(p.parse(new Cursor("a")), 'a', 0, 1);
-        verifyParseResult(p.parse(new Cursor("b")), 'b', 0, 1);
-        assertThrows(ParseException.class, () -> p.parse("x"));
-        assertThrows(ParseException.class, () -> p.parse(""));
+        Character r1 = p.parse("a");
+        assertEquals((Character) 'a', r1);
+        Character r = p.parse("b");
+        assertEquals((Character) 'b', r);
+        assertThrows(InternalParseException.class, () -> p.parse("x"));
+        assertThrows(InternalParseException.class, () -> p.parse(""));
     }
 
     @Test
     public void testOneOf1() {
         Parser<Character> p = oneOf(ch('a'), ch('b'), ch('c'));
-        verifyParseResult(p.parse(new Cursor("a")), 'a', 0, 1);
-        verifyParseResult(p.parse(new Cursor("b")), 'b', 0, 1);
-        verifyParseResult(p.parse(new Cursor("c")), 'c', 0, 1);
-        assertThrows(ParseException.class, () -> p.parse("d"));
-        assertThrows(ParseException.class, () -> p.parse(""));
+        Character r2 = p.parse("a");
+        assertEquals((Character) 'a', r2);
+        Character r1 = p.parse("b");
+        assertEquals((Character) 'b', r1);
+        Character r = p.parse("c");
+        assertEquals((Character) 'c', r);
+        assertThrows(InternalParseException.class, () -> p.parse("d"));
+        assertThrows(InternalParseException.class, () -> p.parse(""));
     }
 
     @Test
     public void testOneOf2() {
         Parser<Character> p = oneOf(ch('a'));
-        verifyParseResult(p.parse(new Cursor("a")), 'a', 0, 1);
-        assertThrows(ParseException.class, () -> p.parse("d"));
-        assertThrows(ParseException.class, () -> p.parse(""));
+        Character r = p.parse("a");
+        assertEquals((Character) 'a', r);
+        assertThrows(InternalParseException.class, () -> p.parse("d"));
+        assertThrows(InternalParseException.class, () -> p.parse(""));
     }
 
     @Test
     public void testOneOf3() {
         Parser<Object> p = oneOf();
-        assertThrows(ParseException.class, () -> p.parse("a"));
-        assertThrows(ParseException.class, () -> p.parse(""));
+        assertThrows(InternalParseException.class, () -> p.parse("a"));
+        assertThrows(InternalParseException.class, () -> p.parse(""));
     }
 
     @Test
     public void testMap() {
         Parser<Integer> p = str("hello").map(String::length);
-        verifyParseResult(p.parse(new Cursor("hello")), 5, 0, 5);
-        assertThrows(ParseException.class, () -> p.parse("hi"));
-    }
-
-    @Test
-    public void testMapException1() {
-        Parser<String> p = str("hello").mapException((cursor, throwable) -> {
-            assertEquals(0, cursor.index());
-            assertInstanceOf(ParseException.class, throwable);
-            return new MyException(cursor, "byx");
-        });
-
-        verifyParseResult(p.parse(new Cursor("hello")), "hello", 0, 5);
-        assertThrows(MyException.class, () -> p.parse("hi"));
-    }
-
-    @Test
-    public void testMapException2() {
-        Parser<String> p = str("hello").mapException(throwable -> {
-            assertInstanceOf(ParseException.class, throwable);
-            return new MyException(null, "byx");
-        });
-
-        verifyParseResult(p.parse(new Cursor("hello")), "hello", 0, 5);
-        assertThrows(MyException.class, () -> p.parse("hi"));
+        Integer r = p.parse("hello");
+        assertEquals((Integer) 5, r);
+        assertThrows(InternalParseException.class, () -> p.parse("hi"));
     }
 
     @Test
     public void testMany() {
         Parser<List<Character>> p = ch('a').many();
-        verifyParseResult(p.parse(new Cursor("")), Collections.emptyList(), 0, 0);
-        verifyParseResult(p.parse(new Cursor("bbb")), Collections.emptyList(), 0, 0);
-        verifyParseResult(p.parse(new Cursor("a")), List.of('a'), 0, 1);
-        verifyParseResult(p.parse(new Cursor("aaa")), List.of('a', 'a', 'a'), 0, 3);
+        List<?> r3 = p.parse("");
+        assertEquals(Collections.emptyList(), r3);
+        List<?> r2 = p.parse("bbb");
+        assertEquals(Collections.emptyList(), r2);
+        List<Character> r1 = p.parse("a");
+        assertEquals(List.of('a'), r1);
+        List<Character> r = p.parse("aaa");
+        assertEquals(List.of('a', 'a', 'a'), r);
     }
 
     @Test
     public void testMany1() {
         Parser<List<Character>> p = ch('a').many1();
-        verifyParseResult(p.parse(new Cursor("a")), List.of('a'), 0, 1);
-        verifyParseResult(p.parse(new Cursor("aaa")), List.of('a', 'a', 'a'), 0, 3);
-        assertThrows(ParseException.class, () -> p.parse("bbb"));
-        assertThrows(ParseException.class, () -> p.parse(""));
-    }
-
-    @Test
-    public void testRepeat() {
-        Parser<List<Character>> p = ch('a').repeat(3);
-        verifyParseResult(p.parse(new Cursor("aaa")), List.of('a', 'a', 'a'), 0, 3);
-        assertThrows(ParseException.class, () -> p.parse("a"));
-        assertThrows(ParseException.class, () -> p.parse("aa"));
-        assertThrows(ParseException.class, () -> p.parse("bbb"));
-        assertThrows(ParseException.class, () -> p.parse(""));
+        List<Character> r1 = p.parse("a");
+        assertEquals(List.of('a'), r1);
+        List<Character> r = p.parse("aaa");
+        assertEquals(List.of('a', 'a', 'a'), r);
+        assertThrows(InternalParseException.class, () -> p.parse("bbb"));
+        assertThrows(InternalParseException.class, () -> p.parse(""));
     }
 
     @Test
     public void testOpt1() {
         Parser<Character> p = ch('a').opt('x');
-        verifyParseResult(p.parse(new Cursor("a")), 'a', 0, 1);
-        verifyParseResult(p.parse(new Cursor("byx")), 'x', 0, 0);
-        verifyParseResult(p.parse(new Cursor("")), 'x', 0, 0);
+        Character r2 = p.parse("a");
+        assertEquals((Character) 'a', r2);
+        Character r1 = p.parse("byx");
+        assertEquals((Character) 'x', r1);
+        Character r = p.parse("");
+        assertEquals((Character) 'x', r);
     }
 
     @Test
     public void testOpt2() {
         Parser<Character> p = ch('a').opt();
-        verifyParseResult(p.parse(new Cursor("a")), 'a', 0, 1);
-        verifyParseResult(p.parse(new Cursor("byx")), null, 0, 0);
-        verifyParseResult(p.parse(new Cursor("")), null, 0, 0);
+        Character r2 = p.parse("a");
+        assertEquals((Character) 'a', r2);
+        Character r1 = p.parse("byx");
+        assertNull(r1);
+        Character r = p.parse("");
+        assertNull(r);
     }
 
     @Test
@@ -436,103 +362,88 @@ public class ParsercTest {
             return ch('a');
         });
         assertEquals(0, val[0]);
-        verifyParseResult(p.parse(new Cursor("a")), 'a', 0, 1);
+        Character r = p.parse("a");
+        assertEquals((Character) 'a', r);
         assertEquals(1, val[0]);
     }
 
     @Test
     public void testSurround1() {
         Parser<Character> p = ch('a').surround(ch('('), ch(')'));
-        verifyParseResult(p.parse(new Cursor("(a)")), 'a', 0, 3);
-        assertThrows(ParseException.class, () -> p.parse("(a"));
-        assertThrows(ParseException.class, () -> p.parse("a)"));
-        assertThrows(ParseException.class, () -> p.parse("a"));
-        assertThrows(ParseException.class, () -> p.parse("(b)"));
-        assertThrows(ParseException.class, () -> p.parse(""));
+        Character r = p.parse("(a)");
+        assertEquals((Character) 'a', r);
+        assertThrows(InternalParseException.class, () -> p.parse("(a"));
+        assertThrows(InternalParseException.class, () -> p.parse("a)"));
+        assertThrows(InternalParseException.class, () -> p.parse("a"));
+        assertThrows(InternalParseException.class, () -> p.parse("(b)"));
+        assertThrows(InternalParseException.class, () -> p.parse(""));
     }
 
     @Test
     public void testSurround2() {
         Parser<Character> p = ch('a').surround(str("***"));
-        verifyParseResult(p.parse(new Cursor("***a***")), 'a', 0, 7);
-        assertThrows(ParseException.class, () -> p.parse("***a**"));
-        assertThrows(ParseException.class, () -> p.parse("*a***"));
-        assertThrows(ParseException.class, () -> p.parse("*a**"));
-        assertThrows(ParseException.class, () -> p.parse("***b***"));
-        assertThrows(ParseException.class, () -> p.parse(""));
+        Character r = p.parse("***a***");
+        assertEquals((Character) 'a', r);
+        assertThrows(InternalParseException.class, () -> p.parse("***a**"));
+        assertThrows(InternalParseException.class, () -> p.parse("*a***"));
+        assertThrows(InternalParseException.class, () -> p.parse("*a**"));
+        assertThrows(InternalParseException.class, () -> p.parse("***b***"));
+        assertThrows(InternalParseException.class, () -> p.parse(""));
     }
 
     @Test
     public void testSkipFirst() {
         Parser<String> p = skip(ch('a')).and(str("bc"));
-        verifyParseResult(p.parse(new Cursor("abc")), "bc", 0, 3);
+        String r = p.parse("abc");
+        assertEquals("bc", r);
     }
 
     @Test
     public void testSkipSecond() {
         Parser<Character> p = ch('a').skip(str("bc"));
-        verifyParseResult(p.parse(new Cursor("abc")), 'a', 0, 3);
+        Character r = p.parse("abc");
+        assertEquals((Character) 'a', r);
     }
 
     @Test
     public void testSkip() {
         Parser<String> p = skip(ch('a')).and(str("bc"));
-        verifyParseResult(p.parse(new Cursor("abc")), "bc", 0, 3);
-    }
-
-    @Test
-    public void testThen() {
-        Set<String> keywords = Set.of("if", "else", "while", "for");
-        Parser<Character> alpha = range('a', 'z').or(range('A', 'Z'));
-        Parser<Character> digit = range('0', '9');
-        Parser<Character> underline = ch('_');
-        Parser<String> identifier = oneOf(alpha, underline)
-                .and(oneOf(digit, alpha, underline).many())
-                .map(p -> p.first() + p.second().stream().map(Objects::toString).collect(Collectors.joining()))
-                .then(r -> keywords.contains(r.result())
-                        ? fail(input -> new MyException(r.before(), "关键字不能作为标识符"))
-                        : success(r.result()));
-        assertEquals("nums", identifier.parse("nums"));
-        assertThrows(MyException.class, () -> identifier.parse("while"));
-    }
-
-    @Test
-    public void testFatal() {
-        Parser<Character> p = ch('a').fatal((c, e) -> {
-            assertEquals(0, c.index());
-            assertNotNull(e);
-            return new MyException(c, "");
-        });
-        assertThrows(MyException.class, () -> p.parse("bcd"));
+        String r = p.parse("abc");
+        assertEquals("bc", r);
     }
 
     @Test
     public void testExpect() {
-        Parser<?> p = expect(str("xy"));
-        verifyParseResult(p.parse(new Cursor("xyz")), null, 0, 0);
-        assertThrows(ParseException.class, () -> p.parse("xz"));
+        Parser<Integer> p = expect(str("xy"), 123);
+        Integer r = p.parse("xyz");
+        assertEquals((Integer) 123, r);
+        assertThrows(InternalParseException.class, () -> p.parse("xz"));
     }
 
     @Test
     public void testNot() {
         Parser<?> p = not(str("xy"));
-        verifyParseResult(p.parse(new Cursor("abc")), null, 0, 0);
-        assertThrows(ParseException.class, () -> p.parse("xyz"));
-    }
-
-    @Test
-    public void testFollow() {
-        Parser<String> p = str("abc").follow(ch('d'));
-        verifyParseResult(p.parse(new Cursor("abcd")), "abc", 0, 3);
-        assertThrows(ParseException.class, () -> p.parse("abcx"));
-        assertThrows(ParseException.class, () -> p.parse("abc"));
+        Object r = p.parse("abc");
+        assertNull(r);
+        assertThrows(InternalParseException.class, () -> p.parse("xyz"));
     }
 
     @Test
     public void testNotFollow() {
         Parser<String> p = str("abc").notFollow(ch('d'));
-        verifyParseResult(p.parse(new Cursor("abcx")), "abc", 0, 3);
-        verifyParseResult(p.parse(new Cursor("abc")), "abc", 0, 3);
-        assertThrows(ParseException.class, () -> p.parse("abcd"));
+        String r1 = p.parse("abcx");
+        assertEquals("abc", r1);
+        String r = p.parse("abc");
+        assertEquals("abc", r);
+        assertThrows(InternalParseException.class, () -> p.parse("abcd"));
+    }
+
+    @Test
+    public void testFatal() {
+        Parser<Character> p = ch('a').fatal(e -> new MyException(e.getInput(), e.getIndex(), "msg"));
+        MyException e = assertThrows(MyException.class, () -> p.parse("bcd"));
+        assertEquals("bcd", e.getInput());
+        assertEquals(0, e.getIndex());
+        assertEquals("msg", e.getMessage());
     }
 }
